<resources>
    <string name="app_name">Psico</string>
    <string name="home">Inicio</string>
    <string name="habits">Hábitos</string>
    <string name="relax">Relajación</string>
    <string name="emotion">Emociones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meditacion">Meditación</string>

    <string name="background1">fondo</string>
    <string name="efectbackground">efecto de desvanecimiento</string>
    <string name="iconText">icono de la aplicacion</string>

    <string name="login">Iniciar Sesion</string>
    <string name="register">Registrarse</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="loginText">boton de inicio de sesion</string>
    <string name="registerText">boton de registro de usuario</string>
    <string name="userText">campo de usuario</string>
    <string name="passwordText">campo de contraseña</string>
    <string name="returne">Volver a inicio de sesión</string>
    <string name="email">Email</string>
</resources>