<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity"
android:transitionName="shared_element_container">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background1"
        android:src="@drawable/waves_background" />

    <View
        android:id="@+id/fadeView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/half_screen_gradient" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="26dp"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="358dp"
            android:layout_height="236dp"
            android:contentDescription="@string/iconText"
            app:srcCompat="@drawable/ic_dashboard_black_24dp"
            android:paddingBottom="10dp"
            android:layout_margin="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="10dp"
            app:cornerRadius="8dp"
            app:rippleColor="?attr/colorOnSecondary"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:cornerRadius="8dp"
            android:layout_margin="10dp"
            app:rippleColor="?attr/colorOnSecondary"
            />


    </LinearLayout>


</FrameLayout>
